# jb-formality-detection

./: README.md  neutral_sampled.csv  pyproject.toml
data/: labeling.py  merging.py  sampling.py  system.txt  user.txt
evaluation/: evaluation.ipynb  inference.ipynb  with_predictions.csv
