[project]
name = "formalityeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "hf-xet>=1.0.0",
    "matplotlib>=3.9.4",
    "nltk>=3.9.1",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
]
